Added secondary navigation bar with categories and apply styling

--- a/CSS/HomeStyles.css
+++ b/CSS/HomeStyles.css
@@ -80,3 +80,26 @@ body {
   top: 12px;
   cursor: pointer;
 }
+
+.nav-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  gap: 20px;
+  background-color: #161616;
+}
+
+.nav-list li a {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  padding: 14px 15px;
+  transition: background-color 0.3s ease;
+}
+
+.nav-list li a:hover {
+  background-color: #313131;
+}
