--- a/CSS/HomeStyles.css
+++ b/CSS/HomeStyles.css
@@ -146,3 +146,151 @@ body {
 }
 
 /* hero section end here */
+
+/* homepage content card started */
+
+.section-container {
+  max-width: 1300px;
+  margin: auto;
+  padding: 10px;
+  margin-top: 50px;
+}
+
+.homepage-content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.homepage-Cards-container {
+  flex: 3;
+  max-width: 800px;
+}
+
+.homepage-heading-details {
+  position: relative;
+}
+
+.homepage-heading-details h1 {
+  text-transform: uppercase;
+  color: #161616;
+  border-bottom: 4px solid #d80202;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.more-link {
+  display: inline-block;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  margin-top: 10px;
+  padding-left: 20px;
+  padding-right: 10px;
+  color: white;
+  background-color: #d80202;
+  text-decoration: none;
+}
+
+/* Card styling */
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.card {
+  width: 250px;
+  gap: 15px;
+  border: 1px solid #c9c9c9;
+  border-radius: 5px;
+}
+
+.card img {
+  width: 250px;
+  height: 150px;
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
+}
+
+.homepage-Card {
+  flex: 1;
+  padding: 4px;
+}
+
+.homepage-Card h3 {
+  font-size: 13px;
+}
+
+.homepage-Card p {
+  font-size: 12px;
+}
+
+.homepage-Card a {
+  font-size: 12px;
+  color: #d80202;
+  text-decoration: none;
+}
+
+/* Sidebar styling */
+.homepage-Sidebar {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 200px;
+}
+
+.sidebar-section {
+  margin-bottom: 20px;
+}
+
+.sidebar-section a {
+  display: block;
+  font-size: 14px;
+  margin: 10px 0px;
+  cursor: pointer;
+  color: #313131;
+}
+.sidebar-section a:hover {
+  color: red;
+}
+
+.sidebar-section button {
+  padding: 8px 14px;
+  background-color: #d80202;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.sidebar-section button:hover {
+  background-color: #d80202e0;
+}
+.newsletter-section form {
+  display: flex;
+  flex-direction: column;
+}
+
+.newsletter-section input {
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.newsletter-section button {
+  padding: 10px;
+  background-color: #d80202;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.newsletter-section button:hover {
+  background-color: #d80202e0;
+}
+
+/* homepage content card ended */
