--- a/CSS/aboutusPage.css
+++ b/CSS/aboutusPage.css
@@ -157,3 +157,91 @@ body {
 }
 
 /* hero section end here */
+
+/* footer has been started from here  */
+
+.footer-section {
+  padding: 40px 20px;
+  margin-top: 80px;
+  background-color: #181717;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer-nav-links {
+  flex: 1;
+  min-width: 220px;
+  margin: 0 30px;
+}
+
+.footer-nav-links h3 {
+  color: #ebebeb;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+.footer-nav-links ul {
+  padding: 0;
+  margin: 0;
+  color: #dddddd;
+}
+
+.footer-nav-links ul li a {
+  text-decoration: none;
+  color: #dddddd;
+  font-weight: 300;
+}
+
+.footer-nav-links ul li a:hover {
+  color: #e60505;
+}
+
+.footer-follow-us-Container {
+  margin-top: 25px;
+}
+
+.footer-nav-links ul li {
+  list-style: none;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+.footer-nav-links input {
+  width: 90%;
+  padding: 12px;
+  border: 1px solid #333;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  background-color: #222;
+  color: white;
+}
+
+.footer-nav-links button {
+  padding: 12px 25px;
+  border: none;
+  border-radius: 4px;
+  background-color: #bd0101;
+  color: white;
+  font-size: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  margin-top: 10px;
+}
+
+.footer-nav-links button:hover {
+  background-color: #d30000;
+  transform: scale(1.05);
+}
+
+.footer-copyright-section {
+  padding: 20px 0px;
+  text-align: center;
+  background-color: #0e0d0d;
+  color: #b8b8b8;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+/* footer has been Ended here  */
