--- a/CSS/HomeStyles.css
+++ b/CSS/HomeStyles.css
@@ -104,6 +104,16 @@ body {
   background-color: #313131;
 }
 
+.search-and-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.search-and-bar .menu-bar-icon {
+  width: 22px;
+  display: none;
+}
+
 /* navbar styling end */
 
 /* hero section started form here */
@@ -386,3 +396,95 @@ body {
 }
 
 /* footer has been Ended here  */
+
+/* Mobile Device */
+
+@media screen and (max-width: 500px) {
+  .top-navbar {
+    flex-direction: column;
+  }
+
+  .top-navbar h4 {
+    font-size: 16px;
+  }
+
+  .top-navbar h2 {
+    font-size: 24px;
+  }
+
+  .top-nav-search-bar input {
+    width: 330px;
+  }
+  .top-navbar {
+    flex-direction: column;
+  }
+
+  .top-nav-icons img {
+    display: none;
+  }
+
+  .top-nav-list {
+    margin: 8px auto;
+  }
+
+  .top-nav-search-bar input {
+    width: 280px;
+  }
+
+  .nav-list {
+    display: none;
+  }
+  .search-and-bar {
+    gap: 20px;
+    margin-top: 14px;
+  }
+  .search-and-bar .menu-bar-icon {
+    display: block;
+    cursor: pointer;
+  }
+
+  .top-nav-search-bar {
+    padding: 4px 10px;
+    margin-top: 0px;
+  }
+
+  .top-nav-search-bar img {
+    width: 8x;
+    top: 8px;
+  }
+}
+/* Tablet Device */
+
+@media screen and (min-width: 500px) and (max-width: 768px) {
+  .top-navbar {
+    flex-direction: column;
+  }
+
+  .top-nav-icons img {
+    display: none;
+  }
+
+  .top-nav-list {
+    margin: 8px auto;
+  }
+  .top-nav-search-bar input {
+    width: 400px;
+  }
+
+  .top-navbar h4 {
+    font-size: 18px;
+  }
+
+  .top-navbar h2 {
+    font-size: 28px;
+  }
+  .nav-list {
+    gap: 2px;
+    padding: 5px 0;
+  }
+
+  .nav-list li a {
+    padding: 8px 5px;
+    font-size: 14px;
+  }
+}
