added links in sport

--- a/CSS/sportstyle.css
+++ b/CSS/sportstyle.css
@@ -240,12 +240,14 @@ body {
 }
 
 /* Sidebar styling */
+/* Sidebar styling */
 .sport-Sidebar {
   flex: 1;
   display: flex;
   flex-direction: column;
   gap: 20px;
   width: 200px;
+  font-size:19px;
 }
 
 .sidebar-section {
@@ -254,7 +256,7 @@ body {
 
 .sidebar-section a {
   display: block;
-  font-size: 20px;
+  font-size: 14px;
   margin: 10px 0px;
   cursor: pointer;
   color: #313131;
