--- a/CSS/business.css
+++ b/CSS/business.css
@@ -114,3 +114,14 @@ body {
   }
   /* navbar styling end */
   
+  .readmore-heading-details {
+    position: relative;
+  }
+  
+  .readmore-heading-details h1 {
+    text-transform: uppercase;
+    color: #161616;
+    border-bottom: 4px solid #d80202;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+  }
