--- a/CSS/business.css
+++ b/CSS/business.css
@@ -114,6 +114,11 @@ body {
   }
   /* navbar styling end */
   
+  .back-btn{
+    height: 50px;
+    width: 50px;
+    padding-top:10px;
+  }
   .readmore-heading-details {
     position: relative;
   }
@@ -122,7 +127,7 @@ body {
     text-transform: uppercase;
     color: #161616;
     border-bottom: 3px solid #d80202;
-    padding-top: 25px;
+    padding-top: 7px;
     padding-bottom: 10px;
     margin-bottom: 20px;
     text-align: center;
