--- a/CSS/sportstyle.css
+++ b/CSS/sportstyle.css
@@ -392,3 +392,18 @@ body {
 }
 
 /* footer has been Ended here  */
+
+.container0
+{
+ display:flex;
+ flex-direction: column;
+  margin:50px;
+  padding:50px;
+  width:1000px;
+  border-radius:10px;
+  border:2px solid white;
+  position: fixed;
+   margin-left:200px;
+   margin-right:200px;
+
+}
