--- a/CSS/HomeStyles.css
+++ b/CSS/HomeStyles.css
@@ -492,3 +492,10 @@ body {
  {
   background-color: #333;
  }
+ 
+ .homepage-Card a:hover
+ {
+  text-decoration: underline;
+  color: #d30000;
+ }
+ 
