--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -103,3 +103,8 @@
         background-color: #313131;
     }
     /* navbar styling end */
+    
+    .contact {
+        display: flex;
+        justify-content: center;
+    }
