--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -108,3 +108,13 @@
         display: flex;
         justify-content: center;
     }
+    
+    .container {
+        background-color: #f0f0f0;
+        display: flex;
+        flex-direction: row;
+        height: 400px;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
