--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -118,3 +118,11 @@
         justify-content: space-around;
         flex-wrap: wrap;
     }
+    
+    .card {
+        width: 250px;
+        background-color: #fff;
+        height: 250px;
+        border-radius: 10px;
+        border: none;
+    }
