--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -126,3 +126,11 @@
         border-radius: 10px;
         border: none;
     }
+    
+    .img {
+        width: 100px;
+        margin-left: 60px;
+        margin-right: 60px;
+        height: 75px;
+        padding-top: 20px;
+    }
