address heading added class

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -137,4 +137,10 @@
     
     .paragraph {
         text-align: center;
+        font-family: poppins;
+    }
+    
+    .heading {
+        color: #8a8a5c;
+        text-align: center;
     }
