--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -144,3 +144,8 @@
         color: #8a8a5c;
         text-align: center;
     }
+    
+    .form {
+        text-align: center;
+        justify-content: center;
+    }
