--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -107,6 +107,8 @@
     .contact {
         display: flex;
         justify-content: center;
+        margin-top: 30px;
+        margin-bottom: 30px;
     }
     
     .container {
@@ -125,6 +127,8 @@
         height: 250px;
         border-radius: 10px;
         border: none;
+        box-shadow: 0 0 40px 5px #cccccc;
+        cursor: pointer;
     }
     
     .img {
