--- a/CSS/education.css
+++ b/CSS/education.css
@@ -341,3 +341,39 @@ body {
 }
 
 /* footer has been Ended here  */
+
+.back-btn{
+  height: 50px;
+  width: 50px;
+  padding-top:10px;
+}
+.readmore-heading-details {
+  position: relative;
+}
+
+.readmore-heading-details h1 {
+  text-transform: uppercase;
+  color: #161616;
+  border-bottom: 3px solid #d80202;
+  padding-top: 7px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.img_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.front_img{
+  height:670px;
+  width: auto;
+}
+.information_block{
+  height: 500px;
+  width: 1000px;
+  margin-top: 30px;
+  font-size: 20px;
+}
