--- a/CSS/entertainment.css
+++ b/CSS/entertainment.css
@@ -115,8 +115,7 @@ body {
 }
 
 /* navbar styling end */
-
-/* hero section started form here */
+  /* hero section started form here */
 
 .hero-section {
   background: linear-gradient(
@@ -190,11 +189,11 @@ body {
 }
 
 .page-second-card-container {
+  display: flex;
+  flex-direction: row;
+  
  
 }
-
- 
-
 
 .more-link {
   display: inline-block;
@@ -214,14 +213,16 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap:10px;
+  
 }
 
 .card {
-  width: 250px;
+  width:250px;
   gap: 15px;
   border: 1px solid #c9c9c9;
-  border-radius: 5px;
+  border-radius: 10px;
+  padding:2px;
 }
 
 .card img {
@@ -230,6 +231,7 @@ body {
   object-fit: cover;
   background-position: center;
   background-size: cover;
+
 }
 
 .page-Card {
@@ -250,6 +252,42 @@ body {
   color: #d80202;
   text-decoration: none;
 }
+.back-btn{
+  height: 50px;
+  width: 50px;
+  padding-top:10px;
+}
+.readmore-heading-details {
+  position: relative;
+}
+
+.readmore-heading-details h1 {
+  text-transform: uppercase;
+  color: #161616;
+  border-bottom: 3px solid #d80202;
+  padding-top: 7px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.img_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.front_img{
+  height:670px;
+  width: auto;
+}
+.information_block{
+  height: 500px;
+  width: 1000px;
+  margin-top: 30px;
+  font-size: 20px;
+}
+
 
 /* Sidebar styling */
 .page-Sidebar {
