--- a/CSS/entertainment.css
+++ b/CSS/entertainment.css
@@ -156,7 +156,7 @@ body {
 
 /* hero section end here */
 
-/* homepage content card started */
+/* page content card started */
 
 .section-container {
   max-width: 1300px;
@@ -348,7 +348,7 @@ body {
   background-color: #d80202e0;
 }
 
-/* homepage content card ended */
+/* page content card ended */
 
 /* footer has been started from here  */
 
