--- a/CSS/business.css
+++ b/CSS/business.css
@@ -149,6 +149,13 @@ body {
     margin-top: 30px;
     font-size: 20px;
   }
+  .d-t{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    margin-left: 120px;
+  }
 
   /* footer has been started from here  */
 
