--- a/CSS/worldnews.css
+++ b/CSS/worldnews.css
@@ -236,4 +236,10 @@ body {
   font-weight: 400;
 }
 
-/* footer has been Ended here  */
+.d-t{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  margin-left: 120px;
+}
