--- a/CSS/tech.css
+++ b/CSS/tech.css
@@ -343,9 +343,10 @@ body {
 /* footer has been Ended here  */
 /*news content  */
 .news-con{
- border-bottom: 1px solid red;
+  border-bottom: 4px solid #d80202;
 }
 .text-center{
   text-align: center;
-  font-size: 40px;
+  font-size: 50px;
+  padding: 40px;
 }
