--- a/CSS/tech.css
+++ b/CSS/tech.css
@@ -351,5 +351,9 @@ body {
   padding: 40px;
 }
 .news_dt{
-  display: flex;
+}
+.news_img{
+  height: 300px;
+  display: block;
+  margin: 30px auto;
 }
