--- a/CSS/aboutusPage.css
+++ b/CSS/aboutusPage.css
@@ -341,6 +341,35 @@ body {
     width: 8x;
     top: 8px;
   }
+
+  .hero-content h1 {
+    font-size: 30px;
+    line-height: 35px;
+  }
+
+  .about-content {
+    width: 300px;
+  }
+
+  .about-content h2 {
+    font-size: 20px;
+    margin-bottom: 8px;
+  }
+
+  .about-content p {
+    font-size: 14px;
+  }
+  .footer-nav-links {
+    margin-bottom: 20px;
+  }
+
+  .footer-nav-links a {
+    font-size: 14px;
+  }
+
+  .footer-nav-links ul li {
+    font-size: 14px;
+  }
 }
 /* Tablet Device */
 
@@ -374,6 +403,31 @@ body {
 
   .nav-list li a {
     padding: 8px 5px;
+    font-size: 14px;
+  }
+
+  .about-content {
+    width: 300px;
+  }
+
+  .about-content h2 {
+    font-size: 20px;
+    margin-bottom: 8px;
+  }
+
+  .about-content p {
+    font-size: 14px;
+  }
+
+  .footer-nav-links {
+    margin-bottom: 20px;
+  }
+
+  .footer-nav-links a {
+    font-size: 14px;
+  }
+
+  .footer-nav-links ul li {
     font-size: 14px;
   }
 }
