--- a/CSS/HomeStyles.css
+++ b/CSS/HomeStyles.css
@@ -276,7 +276,9 @@ body {
   margin: 10px 0px;
   cursor: pointer;
   color: #313131;
+  text-decoration: none;
 }
+
 .sidebar-section a:hover {
   color: red;
 }
