--- a/CSS/entertainment.css
+++ b/CSS/entertainment.css
@@ -308,7 +308,9 @@ body {
   margin: 10px 0px;
   cursor: pointer;
   color: #313131;
+  text-decoration: none;
 }
+
 .sidebar-section a:hover {
   color: red;
 }
@@ -347,7 +349,6 @@ body {
 .newsletter-section button:hover {
   background-color: #d80202e0;
 }
-
 /* page content card ended */
 
 /* footer has been started from here  */
