--- a/CSS/entertainment.css
+++ b/CSS/entertainment.css
@@ -255,7 +255,10 @@ body {
 .back-btn{
   height: 50px;
   width: 50px;
-  padding-top:10px;
+  padding-top:20px;
+  position: absolute;
+  top: -15px;
+  left: 20px;
 }
 .readmore-heading-details {
   position: relative;
@@ -269,6 +272,7 @@ body {
   padding-bottom: 10px;
   margin-bottom: 20px;
   text-align: center;
+  margin-top: 25px;
 }
 .img_container{
   display: flex;
