--- a/CSS/education.css
+++ b/CSS/education.css
@@ -193,8 +193,8 @@ body {
     color: #d80202;
     text-decoration: none;
   }
-  
-  /* Sidebar styling */
+   
+   /* Sidebar styling */
   .homepage-Sidebar {
     flex: 1;
     display: flex;
@@ -213,6 +213,7 @@ body {
     margin: 10px 0px;
     cursor: pointer;
     color: #313131;
+    text-decoration: none;
   }
   .sidebar-section a:hover {
     color: red;
