css containt added

--- a/CSS/tech.css
+++ b/CSS/tech.css
@@ -22,6 +22,10 @@ body {
   font-size: 18px;
 }
 
+.main-logo a {
+  text-decoration: none;
+}
+
 .top-navbar h2 {
   color: #d30000;
   font-size: 30px;
@@ -103,158 +107,220 @@ body {
 .nav-list li a:hover {
   background-color: #313131;
 }
+
+.search-and-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.search-and-bar .menu-bar-icon {
+  width: 22px;
+  display: none;
+}
+
+/* navbar styling end */
+
+/* hero section started form here */
+
+.hero-section {
+  background: linear-gradient(
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 10)
+    ),
+    url("https://img.freepik.com/free-vector/technology-background-with-earth-circuit-diagram_1017-19385.jpg?t=st=1723365499~exp=1723369099~hmac=24460f6a5386b56a7e4237251c2d3513f2bfb56e31f4149c87107954964d06aa&w=740");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 300px;
+  max-width: 98%;
+  margin: auto;
+  display: flex;
+  border-radius: 30px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2px;
+  position: relative;
+}
+
+.hero-content {
+  position: absolute;
+  bottom: 20px;
+  left: 50px;
+  color: white;
+  max-width: 800px;
+}
+.hero-content h1 {
+  font-size: 30px;
+}
+.hero-content p {
+  font-size: 16px;
+}
+.hero-content a {
+  color: #d30000;
+}
+
+.hero-content a:hover {
+  color: rgb(238, 108, 108);
+}
+
+/* hero section end here */
+
 /* homepage content card started */
 
 .section-container {
-    max-width: 1300px;
-    margin: auto;
-    padding: 10px;
-    margin-top: 50px;
-  }
-  
-  .homepage-content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-  }
-  
-  .homepage-Cards-container {
-    flex: 3;
-    max-width: 800px;
-  }
-  
-  .homepage-heading-details {
-    position: relative;
-  }
-  
-  .homepage-heading-details h1 {
-    text-transform: uppercase;
-    color: #161616;
-    border-bottom: 4px solid #d80202;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-  }
-  
-  .hompage-second-card-container {
-    margin-top: 30px;
-  }
-  
-  .more-link {
-    display: inline-block;
-    position: absolute;
-    top: 10px;
-    right: 0;
-    margin-top: 10px;
-    padding-left: 20px;
-    padding-right: 10px;
-    color: white;
-    background-color: #d80202;
-    text-decoration: none;
-  }
-  
-  /* Card styling */
-  .cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-  }
-  
-  .card {
-    width: 250px;
-    gap: 15px;
-    border: 1px solid #c9c9c9;
-    border-radius: 5px;
-  }
-  
-  .card img {
-    width: 250px;
-    height: 150px;
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
-  }
-  
-  .homepage-Card {
-    flex: 1;
-    padding: 4px;
-  }
-  
-  .homepage-Card h3 {
-    font-size: 13px;
-  }
-  
-  .homepage-Card p {
-    font-size: 12px;
-  }
-  
-  .homepage-Card a {
-    font-size: 12px;
-    color: #d80202;
-    text-decoration: none;
-  }
-  
-  /* Sidebar styling */
-  .homepage-Sidebar {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: 200px;
-  }
-  
-  .sidebar-section {
-    margin-bottom: 20px;
-  }
-  
-  .sidebar-section a {
-    display: block;
-    font-size: 14px;
-    margin: 10px 0px;
-    cursor: pointer;
-    color: #313131;
-  }
-  .sidebar-section a:hover {
-    color: red;
-  }
-  
-  .sidebar-section button {
-    padding: 8px 14px;
-    background-color: #d80202;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-  .sidebar-section button:hover {
-    background-color: #d80202e0;
-  }
-  .newsletter-section form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .newsletter-section input {
-    margin-bottom: 10px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .newsletter-section button {
-    padding: 10px;
-    background-color: #d80202;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .newsletter-section button:hover {
-    background-color: #d80202e0;
-  }
-  
-  /* homepage content card ended */
-  /* footer has been started from here  */
+  max-width: 1300px;
+  margin: auto;
+  padding: 10px;
+  margin-top: 50px;
+}
+
+.homepage-content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.homepage-Cards-container {
+  flex: 3;
+  max-width: 800px;
+}
+
+.homepage-heading-details {
+  position: relative;
+}
+
+.homepage-heading-details h1 {
+  text-transform: uppercase;
+  color: #161616;
+  border-bottom: 4px solid #d80202;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.hompage-second-card-container {
+  margin-top: 30px;
+}
+
+.more-link {
+  display: inline-block;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  margin-top: 10px;
+  padding-left: 20px;
+  padding-right: 10px;
+  color: white;
+  background-color: #d80202;
+  text-decoration: none;
+}
+
+/* Card styling */
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.card {
+  width: 250px;
+  gap: 15px;
+  border: 1px solid #c9c9c9;
+  border-radius: 5px;
+}
+
+.card img {
+  width: 250px;
+  height: 150px;
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
+}
+
+.homepage-Card {
+  flex: 1;
+  padding: 4px;
+}
+
+.homepage-Card h3 {
+  font-size: 13px;
+}
+
+.homepage-Card p {
+  font-size: 12px;
+}
+
+.homepage-Card a {
+  font-size: 12px;
+  color: #d80202;
+  text-decoration: none;
+}
+
+/* Sidebar styling */
+.homepage-Sidebar {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 200px;
+}
+
+.sidebar-section {
+  margin-bottom: 20px;
+}
+
+.sidebar-section a {
+  display: block;
+  font-size: 14px;
+  margin: 10px 0px;
+  cursor: pointer;
+  color: #313131;
+  text-decoration: none;
+}
+
+.sidebar-section a:hover {
+  color: red;
+}
+
+.sidebar-section button {
+  padding: 8px 14px;
+  background-color: #d80202;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.sidebar-section button:hover {
+  background-color: #d80202e0;
+}
+.newsletter-section form {
+  display: flex;
+  flex-direction: column;
+}
+
+.newsletter-section input {
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.newsletter-section button {
+  padding: 10px;
+  background-color: #d80202;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.newsletter-section button:hover {
+  background-color: #d80202e0;
+}
+
+/* homepage content card ended */
+
+/* footer has been started from here  */
 
 .footer-section {
   padding: 40px 20px;
@@ -341,6 +407,274 @@ body {
 }
 
 /* footer has been Ended here  */
+
+/* Mobile Device */
+
+@media screen and (max-width: 500px) {
+  .top-navbar {
+    flex-direction: column;
+  }
+
+  .top-navbar h4 {
+    font-size: 16px;
+  }
+
+  .top-navbar h2 {
+    font-size: 24px;
+  }
+
+  .top-nav-search-bar input {
+    width: 330px;
+  }
+  .top-navbar {
+    flex-direction: column;
+  }
+
+  .top-nav-icons img {
+    display: none;
+  }
+
+  .top-nav-list {
+    margin: 8px auto;
+  }
+
+  .top-nav-search-bar input {
+    width: 280px;
+  }
+
+  .nav-list {
+    display: none;
+  }
+  .search-and-bar {
+    gap: 20px;
+    margin-top: 14px;
+  }
+  .search-and-bar .menu-bar-icon {
+    display: block;
+    cursor: pointer;
+  }
+
+  .top-nav-search-bar {
+    padding: 4px 10px;
+    margin-top: 0px;
+  }
+
+  .top-nav-search-bar img {
+    width: 8x;
+    top: 8px;
+  }
+
+  .hero-content {
+    left: 0px;
+    padding: 20px;
+  }
+
+  .hero-content h1 {
+    font-size: 25px;
+  }
+
+  .hero-content p,
+  a {
+    font-size: 14px;
+  }
+
+  .homepage-heading-details h1 {
+    border-bottom: 2px solid #d80202;
+    font-size: 16px;
+    padding-bottom: 2px;
+  }
+
+  .more-link {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    right: 0;
+    margin-top: 0px;
+    padding-left: 10px;
+    padding-right: 5px;
+    font-size: 12px;
+  }
+
+  .section-container {
+    margin-top: 20px;
+  }
+  .card {
+    width: 300px;
+  }
+
+  .card img {
+    width: 300px;
+  }
+
+  /* Sidebar styling */
+
+  .sidebar-section {
+    padding: 0px 25px;
+  }
+
+  .sidebar-section h2 {
+    font-size: 20px;
+  }
+
+  .sidebar-section a {
+    font-size: 13px;
+  }
+
+  .sidebar-section button {
+    padding: 5px 12px;
+    font-size: 12px;
+  }
+
+  .sidebar-section button:hover {
+    background-color: #d80202e0;
+  }
+
+  .newsletter-section {
+    padding: 0px 25px;
+  }
+
+  .newsletter-section h2 {
+    font-size: 20px;
+    margin-bottom: 8px;
+  }
+
+  .footer-nav-links {
+    margin-bottom: 20px;
+  }
+
+  .footer-nav-links a {
+    font-size: 14px;
+  }
+
+  .footer-nav-links ul li {
+    font-size: 14px;
+  }
+}
+/* Tablet Device */
+
+@media screen and (min-width: 500px) and (max-width: 820px) {
+  .top-navbar {
+    flex-direction: column;
+  }
+
+  .top-nav-icons img {
+    display: none;
+  }
+
+  .top-nav-list {
+    margin: 8px auto;
+  }
+  .top-nav-search-bar input {
+    width: 400px;
+  }
+
+  .top-navbar h4 {
+    font-size: 18px;
+  }
+
+  .top-navbar h2 {
+    font-size: 28px;
+  }
+  .nav-list {
+    gap: 2px;
+    padding: 5px 0;
+  }
+
+  .nav-list li a {
+    padding: 8px 5px;
+    font-size: 14px;
+  }
+  .hero-content {
+    left: 0px;
+    padding: 25px;
+  }
+
+  .hero-content h1 {
+    font-size: 28px;
+  }
+
+  .hero-content p,
+  a {
+    font-size: 16px;
+  }
+
+  .homepage-heading-details h1 {
+    border-bottom: 2px solid #d80202;
+    font-size: 18px;
+    padding-bottom: 2px;
+  }
+
+  .more-link {
+    display: inline-block;
+    position: absolute;
+    top: 11px;
+    margin-top: 0px;
+    padding-left: 10px;
+    padding-right: 5px;
+    font-size: 13px;
+  }
+
+  /* cards */
+
+  .cards {
+    flex-wrap: wrap;
+  }
+
+  .homepage-Card h3 {
+    font-size: 13px;
+  }
+
+  .homepage-Card p {
+    font-size: 12px;
+  }
+
+  .homepage-Card a {
+    font-size: 12px;
+    color: #d80202;
+    text-decoration: none;
+  }
+
+  /* Sidebar styling */
+
+  .sidebar-section {
+    padding: 0px 10px;
+  }
+
+  .sidebar-section h2 {
+    font-size: 20px;
+  }
+
+  .sidebar-section a {
+    font-size: 13px;
+  }
+
+  .sidebar-section button {
+    padding: 5px 12px;
+    font-size: 12px;
+  }
+
+  .sidebar-section button:hover {
+    background-color: #d80202e0;
+  }
+
+  .newsletter-section h2 {
+    font-size: 20px;
+    margin-bottom: 8px;
+  }
+
+  .footer-nav-links {
+    margin-bottom: 20px;
+  }
+
+  .footer-nav-links a {
+    font-size: 14px;
+  }
+
+  .footer-nav-links ul li {
+    font-size: 14px;
+  }
+}
+
 /*news content  */
 .news-con{
   border-bottom: 4px solid #d80202;
@@ -355,4 +689,7 @@ body {
   height: 300px;
   display: block;
   margin: 30px auto;
+}
+.news_mar{
+  margin: 40px 50px;
 }
