--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,56 +1,90 @@
-body{
-    background-color:  #f0f0f0;
-}
-.block{
-    height:550px;
-    width: 450px;
-    background-color:white;
-    border: none;
-    border-radius: 10px;
-    display: block;
-    margin: 70px auto;
-    box-shadow: 0px 0px 5px 5px #cccccc ;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-h1{
-    text-align: center;
-    padding-top: 70px;
-    font-size: 50px;
-    margin-bottom: 30px;
+body {
+  background-color: #f7f7f7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.login-container {
+  background-color: #ffffff;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 400px;
+  text-align: center;
 }
 
-.input1{
-   display: flex; 
-   flex-direction: column;
-   padding: 15px;
-   margin: 10px;
+.title {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #333333;
 }
- input{
-    margin: 25px 10px;
-    padding: 7px;
-   cursor: pointer;
- }
 
- button{
-    height: 40px;
-    width:150px ;
-    display: block;
-    margin: 30px auto;
-    border-radius: 50px;
-    border: none;
-    background-color: black;
-    color: white;
- }
+.subtitle {
+  font-size: 14px;
+  margin-bottom: 20px;
+  color: #666666;
+}
 
- button:hover{
-    box-shadow: 0px 0px 5px 5px #cccccc ;
-    color: red;
-    cursor: pointer;
- }
+.input-group {
+  margin-bottom: 20px;
+  text-align: left;
+}
 
+.input-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333333;
+  font-size: 14px;
+}
+
+.input-group input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.login-button {
+  width: 100%;
+  padding: 10px;
+  background-color: #ff4d4d;
+  border: none;
+  border-radius: 5px;
+  color: #ffffff;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.login-button:hover {
+  background-color: #ff3333;
+}
+
+.signup-link {
+  margin-top: 20px;
+  font-size: 14px;
+  color: #666666;
+}
+
+.signup-link a {
+  color: #ff4d4d;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.signup-link a:hover {
+  text-decoration: underline;
+}
