--- a/CSS/HomeStyles.css
+++ b/CSS/HomeStyles.css
@@ -10,6 +10,14 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1000;
+}
+
 .top-navbar {
   display: flex;
   justify-content: space-around;
