--- a/CSS/HomeStyles.css
+++ b/CSS/HomeStyles.css
@@ -10,6 +10,7 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+/* sticky navbar css */
 header {
   position: sticky;
   top: 0;
@@ -17,6 +18,7 @@ header {
   background-color: #fff;
   z-index: 1000;
 }
+/* sticky navbar css */
 
 .top-navbar {
   display: flex;
