--- a/CSS/entertainment.css
+++ b/CSS/entertainment.css
@@ -21,6 +21,11 @@ body {
     font-size: 18px;
 }
 
+.main-logo a {
+    text-decoration: none;
+  }
+  
+
 .top-navbar h2 {
     color: #d30000;
     font-size: 30px;
@@ -114,18 +119,63 @@ body {
     display: none;
 }
 
-
 /* navbar styling end */
-<<<<<<< HEAD
+.back-btn{
+    height: 50px;
+    width: 50px;
+    padding-top:20px;
+    position: absolute;
+    top: -15px;
+    left: 20px;
+  }
+  .readmore-heading-details {
+    position: relative;
+  }
+  
+  .readmore-heading-details h1 {
+    text-transform: uppercase;
+    color: #161616;
+    border-bottom: 3px solid #d80202;
+    padding-top: 7px;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+    margin-top: 25px;
+  }
+  .img_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+  
+  .front_img{
+    height:670px;
+    width: auto;
+  }
+  .information_block{
+    height: 500px;
+    width: 1000px;
+    margin-top: 30px;
+    font-size: 20px;
+  }
+  .d-t{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    margin-left: 120px;
+  }
 
-
-/* hero section started form here */
-=======
   /* hero section started form here */
->>>>>>> fa6d46f8752bce7d450d56f40a00065be06412a8
 
 .hero-section {
-    background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 10)), url("https://img.freepik.com/free-vector/technology-background-with-earth-circuit-diagram_1017-19385.jpg?t=st=1723365499~exp=1723369099~hmac=24460f6a5386b56a7e4237251c2d3513f2bfb56e31f4149c87107954964d06aa&w=740");
+    background: linear-gradient(
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0.6),
+        rgba(0, 0, 0, 10)
+      ),
+      url("https://img.freepik.com/free-vector/technology-background-with-earth-circuit-diagram_1017-19385.jpg?t=st=1723365499~exp=1723369099~hmac=24460f6a5386b56a7e4237251c2d3513f2bfb56e31f4149c87107954964d06aa&w=740");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -138,77 +188,68 @@ body {
     align-items: center;
     margin-top: 2px;
     position: relative;
-}
-
-.hero-content {
+  }
+  
+  .hero-content {
     position: absolute;
     bottom: 20px;
     left: 50px;
     color: white;
     max-width: 800px;
-}
-
-.hero-content a {
+  }
+  .hero-content h1 {
+    font-size: 30px;
+  }
+  .hero-content p {
+    font-size: 16px;
+  }
+  .hero-content a {
     color: #d30000;
-}
-
-.hero-content a:hover {
+  }
+  
+  .hero-content a:hover {
     color: rgb(238, 108, 108);
-}
-
-
-/* hero section end here */
-
-<<<<<<< HEAD
-
-/* homepage content card started */
-=======
-/* page content card started */
->>>>>>> fa6d46f8752bce7d450d56f40a00065be06412a8
-
-.section-container {
+  }
+  
+  /* hero section end here */
+  
+  /* homepage content card started */
+  
+  .section-container {
     max-width: 1300px;
     margin: auto;
-    margin-top: 30px;
     padding: 10px;
     margin-top: 50px;
-}
-
-.page-content {
+  }
+  
+  .page-content {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-}
-
-.page-Cards-container {
+  }
+  
+  .page-Cards-container {
     flex: 3;
     max-width: 800px;
-}
-
-.page-heading-details {
+  }
+  
+  .page-heading-details {
     position: relative;
-}
-
-.page-heading-details h1 {
+  }
+  
+  .page-heading-details h1 {
     text-transform: uppercase;
     color: #161616;
     border-bottom: 4px solid #d80202;
     padding-bottom: 10px;
     margin-bottom: 20px;
-}
-
-<<<<<<< HEAD
-.page-second-card-container {}
-=======
-.page-second-card-container {
-  display: flex;
-  flex-direction: row;
+  }
   
- 
-}
->>>>>>> fa6d46f8752bce7d450d56f40a00065be06412a8
-
-.more-link {
+  .page-second-card-container {
+    margin-top: 30px;
+  }
+  
+  .more-link {
     display: inline-block;
     position: absolute;
     top: 10px;
@@ -219,252 +260,164 @@ body {
     color: white;
     background-color: #d80202;
     text-decoration: none;
-}
-
-
-/* Card styling */
-
-.cards {
-<<<<<<< HEAD
+  }
+  
+  /* Card styling */
+  .cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-}
-
-.card {
+  }
+  
+  .card {
     width: 250px;
     gap: 15px;
     border: 1px solid #c9c9c9;
     border-radius: 5px;
-}
-
-.card img {
+  }
+  
+  .card img {
     width: 250px;
     height: 150px;
     object-fit: cover;
     background-position: center;
     background-size: cover;
-=======
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap:10px;
+  }
   
-}
-
-.card {
-  width:250px;
-  gap: 15px;
-  border: 1px solid #c9c9c9;
-  border-radius: 10px;
-  padding:2px;
-}
-
-.card img {
-  width: 250px;
-  height: 150px;
-  object-fit: cover;
-  background-position: center;
-  background-size: cover;
-
->>>>>>> fa6d46f8752bce7d450d56f40a00065be06412a8
-}
-
-.page-Card {
+  .page-Card {
     flex: 1;
     padding: 4px;
-}
-
-.page-Card h3 {
+  }
+  
+  .page-Card h3 {
     font-size: 13px;
-}
-
-.page-Card p {
+  }
+  
+  .page-Card p {
     font-size: 12px;
-}
-
-.page-Card a {
+  }
+  
+  .page-Card a {
     font-size: 12px;
     color: #d80202;
     text-decoration: none;
-}
-.back-btn{
-  height: 50px;
-  width: 50px;
-  padding-top:20px;
-  position: absolute;
-  top: -15px;
-  left: 20px;
-}
-.readmore-heading-details {
-  position: relative;
-}
-
-.readmore-heading-details h1 {
-  text-transform: uppercase;
-  color: #161616;
-  border-bottom: 3px solid #d80202;
-  padding-top: 7px;
-  padding-bottom: 10px;
-  margin-bottom: 20px;
-  text-align: center;
-  margin-top: 25px;
-}
-.img_container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.front_img{
-  height:670px;
-  width: auto;
-}
-.information_block{
-  height: 500px;
-  width: 1000px;
-  margin-top: 30px;
-  font-size: 20px;
-}
-
-
-
-/* Sidebar styling */
-
-.page-Sidebar {
+  }
+  
+  /* Sidebar styling */
+  .page-Sidebar {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: 20px;
     width: 200px;
-}
-
-.sidebar-section {
+  }
+  
+  .sidebar-section {
     margin-bottom: 20px;
-}
-
-.sidebar-section a {
-<<<<<<< HEAD
+  }
+  
+  .sidebar-section a {
     display: block;
     font-size: 14px;
     margin: 10px 0px;
     cursor: pointer;
     color: #313131;
-=======
-  display: block;
-  font-size: 14px;
-  margin: 10px 0px;
-  cursor: pointer;
-  color: #313131;
-  text-decoration: none;
->>>>>>> 9cfff066332e3f1f9299fa5e75afbdffa58cd075
-}
-
-.sidebar-section a:hover {
+    text-decoration: none;
+  }
+  
+  .sidebar-section a:hover {
     color: red;
-}
-
-.sidebar-section button {
+  }
+  
+  .sidebar-section button {
     padding: 8px 14px;
     background-color: #d80202;
     color: white;
     border: none;
     cursor: pointer;
-}
-
-.sidebar-section button:hover {
+  }
+  .sidebar-section button:hover {
     background-color: #d80202e0;
-}
-
-.newsletter-section form {
+  }
+  .newsletter-section form {
     display: flex;
     flex-direction: column;
-}
-
-.newsletter-section input {
+  }
+  
+  .newsletter-section input {
     margin-bottom: 10px;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
-}
-
-.newsletter-section button {
+  }
+  
+  .newsletter-section button {
     padding: 10px;
     background-color: #d80202;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
-
-.newsletter-section button:hover {
+  }
+  
+  .newsletter-section button:hover {
     background-color: #d80202e0;
-}
-<<<<<<< HEAD
-
-<<<<<<< HEAD
-
-/* homepage content card ended */
-=======
-=======
->>>>>>> 9cfff066332e3f1f9299fa5e75afbdffa58cd075
-/* page content card ended */
->>>>>>> fa6d46f8752bce7d450d56f40a00065be06412a8
-
-
-/* footer has been started from here  */
-
-.footer-section {
+  }
+  
+  /* homepage content card ended */
+  
+  /* footer has been started from here  */
+  
+  .footer-section {
     padding: 40px 20px;
     margin-top: 80px;
     background-color: #181717;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-}
-
-.footer-nav-links {
+  }
+  
+  .footer-nav-links {
     flex: 1;
     min-width: 220px;
     margin: 0 30px;
-}
-
-.footer-nav-links h3 {
+  }
+  
+  .footer-nav-links h3 {
     color: #ebebeb;
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 15px;
-}
-
-.footer-nav-links ul {
+  }
+  
+  .footer-nav-links ul {
     padding: 0;
     margin: 0;
     color: #dddddd;
-}
-
-.footer-nav-links ul li a {
+  }
+  
+  .footer-nav-links ul li a {
     text-decoration: none;
     color: #dddddd;
     font-weight: 300;
-}
-
-.footer-nav-links ul li a:hover {
+  }
+  
+  .footer-nav-links ul li a:hover {
     color: #e60505;
-}
-
-.footer-follow-us-Container {
+  }
+  
+  .footer-follow-us-Container {
     margin-top: 25px;
-}
-
-.footer-nav-links ul li {
+  }
+  
+  .footer-nav-links ul li {
     list-style: none;
     margin-bottom: 10px;
     font-size: 15px;
-}
-
-.footer-nav-links input {
+  }
+  
+  .footer-nav-links input {
     width: 90%;
     padding: 12px;
     border: 1px solid #333;
@@ -472,9 +425,9 @@ body {
     margin-bottom: 10px;
     background-color: #222;
     color: white;
-}
-
-.footer-nav-links button {
+  }
+  
+  .footer-nav-links button {
     padding: 12px 25px;
     border: none;
     border-radius: 4px;
@@ -484,102 +437,290 @@ body {
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
     margin-top: 10px;
-}
-
-.footer-nav-links button:hover {
+  }
+  
+  .footer-nav-links button:hover {
     background-color: #d30000;
     transform: scale(1.05);
-}
-
-.footer-copyright-section {
+  }
+  
+  .footer-copyright-section {
     padding: 20px 0px;
     text-align: center;
     background-color: #0e0d0d;
     color: #b8b8b8;
     font-size: 12px;
     font-weight: 400;
-}
-
-
-/* footer has been Ended here  */
-
-
-/* Mobile Device */
-
-@media screen and (max-width: 500px) {
+  }
+  
+  /* footer has been Ended here  */
+  
+  /* Mobile Device */
+  
+  @media screen and (max-width: 500px) {
     .top-navbar {
-        flex-direction: column;
+      flex-direction: column;
     }
+  
     .top-navbar h4 {
-        font-size: 16px;
+      font-size: 16px;
     }
+  
     .top-navbar h2 {
-        font-size: 24px;
+      font-size: 24px;
     }
+  
     .top-nav-search-bar input {
-        width: 330px;
+      width: 330px;
     }
     .top-navbar {
-        flex-direction: column;
+      flex-direction: column;
     }
+  
     .top-nav-icons img {
-        display: none;
+      display: none;
     }
+  
     .top-nav-list {
-        margin: 8px auto;
+      margin: 8px auto;
     }
+  
     .top-nav-search-bar input {
-        width: 280px;
+      width: 280px;
     }
+  
     .nav-list {
-        display: none;
+      display: none;
     }
     .search-and-bar {
-        gap: 20px;
-        margin-top: 14px;
+      gap: 20px;
+      margin-top: 14px;
     }
     .search-and-bar .menu-bar-icon {
-        display: block;
-        cursor: pointer;
+      display: block;
+      cursor: pointer;
     }
+  
     .top-nav-search-bar {
-        padding: 4px 10px;
-        margin-top: 0px;
+      padding: 4px 10px;
+      margin-top: 0px;
     }
+  
     .top-nav-search-bar img {
-        width: 8x;
-        top: 8px;
+      width: 8x;
+      top: 8px;
     }
-}
-
-
-/* Tablet Device */
-
-@media screen and (min-width: 500px) and (max-width: 768px) {
+  
+    .hero-content {
+      left: 0px;
+      padding: 20px;
+    }
+  
+    .hero-content h1 {
+      font-size: 25px;
+    }
+  
+    .hero-content p,
+    a {
+      font-size: 14px;
+    }
+  
+    .page-heading-details h1 {
+      border-bottom: 2px solid #d80202;
+      font-size: 16px;
+      padding-bottom: 2px;
+    }
+  
+    .more-link {
+      display: inline-block;
+      position: absolute;
+      top: 10px;
+      right: 0;
+      margin-top: 0px;
+      padding-left: 10px;
+      padding-right: 5px;
+      font-size: 12px;
+    }
+  
+    .section-container {
+      margin-top: 20px;
+    }
+    .card {
+      width: 300px;
+    }
+  
+    .card img {
+      width: 300px;
+    }
+  
+    /* Sidebar styling */
+  
+    .sidebar-section {
+      padding: 0px 25px;
+    }
+  
+    .sidebar-section h2 {
+      font-size: 20px;
+    }
+  
+    .sidebar-section a {
+      font-size: 13px;
+    }
+  
+    .sidebar-section button {
+      padding: 5px 12px;
+      font-size: 12px;
+    }
+  
+    .sidebar-section button:hover {
+      background-color: #d80202e0;
+    }
+  
+    .newsletter-section {
+      padding: 0px 25px;
+    }
+  
+    .newsletter-section h2 {
+      font-size: 20px;
+      margin-bottom: 8px;
+    }
+  
+    .footer-nav-links {
+      margin-bottom: 20px;
+    }
+  
+    .footer-nav-links a {
+      font-size: 14px;
+    }
+  
+    .footer-nav-links ul li {
+      font-size: 14px;
+    }
+  }
+  /* Tablet Device */
+  
+  @media screen and (min-width: 500px) and (max-width: 820px) {
     .top-navbar {
-        flex-direction: column;
+      flex-direction: column;
     }
+  
     .top-nav-icons img {
-        display: none;
+      display: none;
     }
+  
     .top-nav-list {
-        margin: 8px auto;
+      margin: 8px auto;
     }
     .top-nav-search-bar input {
-        width: 400px;
+      width: 400px;
     }
+  
     .top-navbar h4 {
-        font-size: 18px;
+      font-size: 18px;
     }
+  
     .top-navbar h2 {
-        font-size: 28px;
+      font-size: 28px;
     }
     .nav-list {
-        gap: 2px;
-        padding: 5px 0;
+      gap: 2px;
+      padding: 5px 0;
     }
+  
     .nav-list li a {
-        padding: 8px 5px;
-        font-size: 14px;
+      padding: 8px 5px;
+      font-size: 14px;
     }
-}
+    .hero-content {
+      left: 0px;
+      padding: 25px;
+    }
+  
+    .hero-content h1 {
+      font-size: 28px;
+    }
+  
+    .hero-content p,
+    a {
+      font-size: 16px;
+    }
+  
+    .homepage-heading-details h1 {
+      border-bottom: 2px solid #d80202;
+      font-size: 18px;
+      padding-bottom: 2px;
+    }
+  
+    .more-link {
+      display: inline-block;
+      position: absolute;
+      top: 11px;
+      margin-top: 0px;
+      padding-left: 10px;
+      padding-right: 5px;
+      font-size: 13px;
+    }
+  
+    /* cards */
+  
+    .cards {
+      flex-wrap: wrap;
+    }
+  
+    .homepage-Card h3 {
+      font-size: 13px;
+    }
+  
+    .homepage-Card p {
+      font-size: 12px;
+    }
+  
+    .homepage-Card a {
+      font-size: 12px;
+      color: #d80202;
+      text-decoration: none;
+    }
+  
+    /* Sidebar styling */
+  
+    .sidebar-section {
+      padding: 0px 10px;
+    }
+  
+    .sidebar-section h2 {
+      font-size: 20px;
+    }
+  
+    .sidebar-section a {
+      font-size: 13px;
+    }
+  
+    .sidebar-section button {
+      padding: 5px 12px;
+      font-size: 12px;
+    }
+  
+    .sidebar-section button:hover {
+      background-color: #d80202e0;
+    }
+  
+    .newsletter-section h2 {
+      font-size: 20px;
+      margin-bottom: 8px;
+    }
+  
+    .footer-nav-links {
+      margin-bottom: 20px;
+    }
+  
+    .footer-nav-links a {
+      font-size: 14px;
+    }
+  
+    .footer-nav-links ul li {
+      font-size: 14px;
+    }
+  }
+
+
+
