--- a/CSS/tech.css
+++ b/CSS/tech.css
@@ -704,6 +704,7 @@ body {
  margin-left:200px;
    margin-right:200px;
    font-size: 20px;
+   margin: 10px auto;
 
 }
 .readmore-heading-details {
