icon  height weight change

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -9,14 +9,15 @@
             font-family: "Poppins", sans-serif;
         }
         /* sticky navbar css */
+        
         header {
-        position: sticky;
-        top: 0;
-        width: 100%;
-        background-color: #fff;
-        z-index: 1000;
-      }
-       /* sticky navbar css */
+            position: sticky;
+            top: 0;
+            width: 100%;
+            background-color: #fff;
+            z-index: 1000;
+        }
+        /* sticky navbar css */
         
         .top-navbar {
             display: flex;
@@ -156,7 +157,7 @@
             width: 100px;
             margin-left: 60px;
             margin-right: 60px;
-            height: 75px;
+            height: 50px;
             padding-top: 20px;
         }
         
@@ -168,6 +169,7 @@
         .heading {
             color: red;
             text-align: center;
+            margin-top: 5px;
         }
         
         .form {
@@ -208,6 +210,10 @@
             border-radius: 5px;
             padding: 5px;
             width: 220px;
+        }
+        
+        .box:hover {
+            background-color: bisque;
         }
         /* footer has been started from here  */
         
