--- a/CSS/sportstyle.css
+++ b/CSS/sportstyle.css
@@ -397,6 +397,7 @@ body {
 {
  display:flex;
  flex-direction: column;
+ align-items: center;
   margin:50px;
   padding:50px;
   width:1000px;
@@ -404,7 +405,7 @@ body {
  margin-left:200px;
    margin-right:200px;
    font-size: 20px;
-
+   
 }
 .readmore-heading-details {
   position: relative;
