--- a/CSS/sportstyle.css
+++ b/CSS/sportstyle.css
@@ -7,101 +7,108 @@ body {
   background-color: #f0f0f0;
   font-family: "Poppins", sans-serif;
 }
-
 .top-navbar {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 20px;
 }
-
 .top-navbar h4 {
-  color: #161616;
-  font-size: 18px;
-}
-
-.top-navbar h2 {
-  color: #d30000;
-  font-size: 30px;
-}
-
-.top-navbar .heading-fisrt {
-  color: #161616;
-}
-
-.top-nav-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 35px;
-}
-
-.top-nav-list li {
-  list-style: none;
-}
-
-.top-nav-list li a {
-  text-decoration: none;
-  color: #d30000;
-  font-size: 15px;
-}
-
-.top-nav-list li a:hover {
-  text-decoration: underline;
-}
-
-.top-nav-icons img {
-  width: 25px;
-  margin-right: 10px;
-}
-
-.top-nav-search-bar {
-  background-color: white;
-  border-radius: 5px;
-  padding: 8px;
-  border: solid 1px #696969;
-  margin-top: 8px;
-  position: relative;
-}
-
-.top-nav-search-bar input {
-  width: 250px;
-  border: none;
-  outline: none;
-}
-
-.top-nav-search-bar img {
-  width: 17px;
-  position: absolute;
-  right: 5px;
-  top: 12px;
-  cursor: pointer;
-}
-
-.nav-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  gap: 20px;
-  background-color: #161616;
-}
-
-.nav-list li a {
-  display: block;
-  text-decoration: none;
-  color: #fff;
-  padding: 14px 15px;
-  transition: background-color 0.3s ease;
-}
-
-.nav-list li a:hover {
-  background-color: #313131;
-}
-
+    color: #161616;
+    font-size: 18px;
+  }
+  
+  .top-navbar h2 {
+    color: #d30000;
+    font-size: 30px;
+  }
+  
+  .top-navbar .heading-fisrt {
+    color: #161616;
+  }
+  
+  .top-nav-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 35px;
+  }
+  
+  .top-nav-list li {
+    list-style: none;
+  }
+  
+  .top-nav-list li a {
+    text-decoration: none;
+    color: #d30000;
+    font-size: 15px;
+  }
+  
+  .top-nav-list li a:hover {
+    text-decoration: underline;
+  }
+  
+  .top-nav-icons img {
+    width: 25px;
+    margin-right: 10px;
+  }
+  
+  .top-nav-search-bar {
+    background-color: white;
+    border-radius: 5px;
+    padding: 8px;
+    border: solid 1px #696969;
+    margin-top: 8px;
+    position: relative;
+  }
+  
+  .top-nav-search-bar input {
+    width: 250px;
+    border: none;
+    outline: none;
+  }
+  
+  .top-nav-search-bar img {
+    width: 17px;
+    position: absolute;
+    right: 5px;
+    top: 12px;
+    cursor: pointer;
+  }
+  
+  .nav-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    gap: 20px;
+    background-color: #161616;
+  }
+  
+  .nav-list li a {
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    padding: 14px 15px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .nav-list li a:hover {
+    background-color: #313131;
+  }
+  
+  .search-and-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .search-and-bar .menu-bar-icon {
+    width: 22px;
+    display: none;
+  }
 /* navbar styling end */
 
 /* hero section started form here */
