--- a/CSS/sportstyle.css
+++ b/CSS/sportstyle.css
@@ -12,6 +12,7 @@ body {
   justify-content: space-around;
   align-items: center;
   padding: 20px;
+  position: relative;
 }
 .top-navbar h4 {
     color: #161616;
@@ -33,6 +34,7 @@ body {
     justify-content: center;
     gap: 20px;
     margin-top: 35px;
+    position: relative;
   }
   
   .top-nav-list li {
@@ -409,10 +411,10 @@ body {
   padding:50px;
   width:1000px;
  border-radius:10px;
- margin-left:200px;
-   margin-right:200px;
+ margin-left:250px;
+   margin-right:250px;
    font-size: 20px;
-   
+   position: relative;
 }
 .readmore-heading-details {
   position: relative;
