--- a/CSS/tech.css
+++ b/CSS/tech.css
@@ -796,3 +796,12 @@ iframe{
     font-size: 14px;
   }
 }
+/* sticky navbar css */
+header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1000;
+}
+/* sticky navbar css */
