--- a/CSS/education.css
+++ b/CSS/education.css
@@ -9,6 +9,15 @@ body {
   background-color: #f0f0f0;
   font-family: "Poppins", sans-serif;
 }
+/* sticky navbar css */
+header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1000;
+}
+/* sticky navbar css */
 
 .top-navbar {
   display: flex;
